--- a/src/components/Pokedexpage/style/PokeDetailPage.css
+++ b/src/components/Pokedexpage/style/PokeDetailPage.css
@@ -26,8 +26,9 @@
 }
 .pokedetail__img {
   width: 300px;
-  display: inline-block;
+  display: flex;
   margin: 0 auto;
+  align-items: center;
   left: 50%;
 }
 .title {
