--- a/src/components/Pokedexpage/style/HomePage.css
+++ b/src/components/Pokedexpage/style/HomePage.css
@@ -2,8 +2,8 @@
    /* width: 100%;*/
     height: auto;
     /*max-height: 800px;*/
-    background-color: rgb(241, 241, 34);
-   
+   /* background-color: rgb(241, 241, 34);*/
+    background-color: rgb(245, 245, 220);
    }
 
 
