--- a/src/components/Pokedexpage/style/HomePage.css
+++ b/src/components/Pokedexpage/style/HomePage.css
@@ -21,7 +21,8 @@
  
     margin-top: 0%;
     top: 0%;
-    background-color: rgb(241, 241, 34);
+    /*background-color: rgb(241, 241, 34);*/
+   background-color: rgb(245, 245, 220);
 }
 .home__title {
  
