--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@ html {
 
 body {
     margin: 0;
-    background-color: rgb(241, 241, 34);
+    /* background-color: rgb(241, 241, 34);*/
+     background-color: rgb(245, 245, 220);
 }
 h1, h2, h3, p, ul, hr {
     margin-top: 0;
